--- a/main.ipynb
+++ b/main.ipynb
@@ -52,8 +52,8 @@
     }
    ],
    "source": [
-    "st.title(\"Распределение типов связи\")\n",
-    "st.write(\"Выбранные типы связи для задач. Датафрейм был отфильтрован, учитываются только следующие платформы: iOS, Android\")\n",
+    "st.title(\"Отклики на задачи\")\n",
+    "st.write(\"Количество задач, количество откликов на задачу\")\n",
     "\n",
     "\n",
     "uploaded_file = st.file_uploader(\"Выбирете файл\")\n",
