add example file

--- a/main.ipynb
+++ b/main.ipynb
@@ -54,11 +54,18 @@
    "source": [
     "st.title(\"Отклики на задачи\")\n",
     "st.write(\"Количество задач, количество откликов на задачу\")\n",
-    "\n",
-    "\n",
     "uploaded_file = st.file_uploader(\"Выбирете файл\")\n",
     "\n",
+    "# отображение чекбокса\n",
+    "use_example_file = st.checkbox(\n",
+    "    \"Использовать пример выгрузки\", False, help=\"Будет использована старая выгрузка\"\n",
+    ")\n",
     "\n",
+    "# обработка чекбокса\n",
+    "if use_example_file:\n",
+    "    uploaded_file = \"match_september_february.csv\"\n",
+    "\n",
+    "# загрузка файла\n",
     "if uploaded_file is not None:\n",
     "     df = pd.read_csv(uploaded_file, sep='|')\n",
     "     df.columns = [\n",
@@ -74,32 +81,38 @@
     "        'number_prematches'\n",
     "     ]\n",
     "\n",
+    "     # изменение типов\n",
     "     df_platform_admins = df[df['platform'] == 'admins']\n",
     "     df_platform_ios = df[df['platform'] == 'ios']\n",
     "     df_platform_android = df[df['platform'] == 'android']\n",
     "\n",
     "     # удаление пропусков, которые появляются из за особенностей выгрузки\n",
     "     df = df.dropna()\n",
+    "     # отображение выгрузки\n",
+    "     st.markdown(\"### Обзор выгрузки\")\n",
+    "     st.dataframe(df.head())\n",
     "\n",
-    "     file_container = st.expander(\"Check your uploaded .csv\")   \n",
-    "     st.write(df)\n",
-    "else:\n",
-    "    st.info(\n",
-    "        f\"\"\"\n",
-    "             👆 Загрузите файл с расширением csv. В файле должны стого содержаться следующие столбцы:\n",
-    "             - id задачи\n",
-    "             - Название\tзадачи\n",
-    "             - Статус\n",
-    "             - Способ связи\n",
-    "             - Дата создания\n",
-    "             - Телефон заказчика\n",
-    "             - Платформа\n",
-    "             - Кол-во откликов\n",
-    "             - Кол-во матчей\n",
-    "             - Кол-во прематчей\n",
-    "             \"\"\"\n",
-    "    )\n",
-    "    st.stop()"
+    "\n",
+    "# остановка выполнения\n",
+    "if not uploaded_file or not use_example_file:\n",
+    "        st.stop()\n",
+    "\n",
+    "\n",
+    "st.info(\n",
+    "   f\"\"\"\n",
+    "        👆 Загрузите файл с расширением csv. В файле должны стого содержаться следующие столбцы:\n",
+    "        - id задачи\n",
+    "        - Название\tзадачи\n",
+    "        - Статус\n",
+    "        - Способ связи\n",
+    "        - Дата создания\n",
+    "        - Телефон заказчика\n",
+    "        - Платформа\n",
+    "        - Кол-во откликов\n",
+    "        - Кол-во матчей\n",
+    "        - Кол-во прематчей\n",
+    "        \"\"\"\n",
+    ")"
    ]
   },
   {
